# algorithms

./: CMakeLists.txt
binary_search/: CMakeLists.txt
binary_search/gadgets_for_dollars_and_pounds/: CMakeLists.txt  gadgets_for_dollars_and_pounds.h  test.cpp
category_unknown/: CMakeLists.txt
category_unknown/dinner_with_natasha/: CMakeLists.txt  dinner_with_natasha.h  test.cpp
category_unknown/labyrinth/: CMakeLists.txt  labyrinth.h  test.cpp
evaluating_expressions/calculator/: CMakeLists.txt  calculator.h  test.cpp
hashmap/: CMakeLists.txt
hashmap/k_dominant_characters/: CMakeLists.txt  k_dominant_characters.h  test.cpp
heap/: CMakeLists.txt
heap/heap/: CMakeLists.txt  heap.h  test.cpp
heap/kth_smallest_in_matrix/: CMakeLists.txt  kth_smallest_in_matrix.h  test.cpp
heap/merge_sorted_lists/: CMakeLists.txt  merge_sorted_lists.h  test.cpp
heap/percentile_in_a_stream/: CMakeLists.txt  percentile_in_a_stream.h  test.cpp
heap/reorg_string_no_heap/: CMakeLists.txt  reorg_string_no_heap  reorg_string_no_heap.h  test.cpp
meet-in-the-middle/: CMakeLists.txt
meet-in-the-middle/maximum_subsequence/: CMakeLists.txt  maximum_subsequence.h  test.cpp
scripts/: git-clang-format.sh
shitty_category/: CMakeLists.txt
shitty_category/stupid_shit/: CMakeLists.txt  stupid_shit.h  test.cpp
stack/: CMakeLists.txt
stack/k_segments_union/: CMakeLists.txt  k_segments_union.h  test.cpp
stack/permutation_sqrt/: CMakeLists.txt  permutation_sqrt.h  test.cpp
string_algorithms/: CMakeLists.txt
two_pointers/: CMakeLists.txt
util/: create_problem.sh
(+10 files in other folders)
